banner content added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h2 class="nav-title">Ma<span class="common-color">r</span>y</h2>
             <ul>
@@ -19,6 +19,16 @@
                 <li><button class="common-btn">Hire Me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi, I  am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="common-btn">Download CV</button>
+                <button class="common-btn">Contact</button>
+            </div>
+            <img class="profile-pic" src="images/hardy.png" alt="hardy">
+        </div>
     </header>
     <main></main>
     <footer></footer>
