--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I  am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="common-btn">Download CV</button>
                 <button class="common-btn">Contact</button>
             </div>
