--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </main>
     <footer>
         <div class="footer-column">
-            <h3 class="section-title">Lets Connect</h3>
+            <h3 id="" class="section-title footer-column-title">Lets Connect</h3>
             <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
             <div class="social-links">
                 <a href=""><img src="images/icons/facebook.png" alt=""></a>
@@ -146,7 +146,15 @@
                 <a href=""><img src="images/icons/insta.png" alt=""></a>
             </div>
         </div>
-        <div class="footer-column"></div>
+        <div class="footer-column">
+            <h3 class="section-title footer-column-title">Let’s Message me</h3>
+            <form action="" class="contact">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="common-btn" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
 </html>
