--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/267a9ecc1d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
@@ -24,8 +25,8 @@
                 <h3 class="banner-greeting">Hi, I  am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="common-btn">Download CV</button>
-                <button class="common-btn">Contact</button>
+                <button class="common-btn"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="common-btn"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile-pic" src="images/hardy.png" alt="hardy">
         </div>
@@ -132,7 +133,7 @@
                 </div>
             </div>
             <div class="download-cv">
-                <button class="common-btn">Download CV</button>
+                <button class="common-btn"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
