--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header hide">
         <nav>
             <h2 class="nav-title">Ma<span class="common-color">r</span>y</h2>
             <ul>
@@ -32,7 +32,7 @@
         </div>
     </header>
     <main>
-        <section class="about">
+        <section class="about hide">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
             <div class="about-info-container">
@@ -82,7 +82,7 @@
             </div>
         </section>
         <!-- resume section -->
-        <section>
+        <section class="hide">
             <h2 id="resume-section-title" class="section-title">A summary of My Resume</h2>
             <div class="resume-container">
                 <div class="resume-column">
@@ -138,7 +138,7 @@
         </section>
     </main>
     <footer>
-        <div class="footer-column">
+        <div class="footer-column hide">
             <h3 id="" class="section-title footer-column-title">Lets Connect</h3>
             <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
             <div class="social-links">
@@ -147,7 +147,7 @@
                 <a href=""><img src="images/icons/insta.png" alt=""></a>
             </div>
         </div>
-        <div class="footer-column">
+        <div class="footer-column hide">
             <h3 class="section-title footer-column-title">Let’s Message me</h3>
             <form action="" class="contact">
                 <input type="text" name="" id="" placeholder="Your Name">
