resume section make responsive

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </section>
         <!-- resume section -->
-        <section class="hide">
+        <section>
             <h2 id="resume-section-title" class="section-title">A summary of My Resume</h2>
             <div class="resume-container">
                 <div class="resume-column">
