--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </section>
     </main>
     <footer>
-        <div class="footer-column hide">
+        <div class="footer-column">
             <h3 id="" class="section-title footer-column-title">Lets Connect</h3>
             <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
             <div class="social-links">
@@ -147,7 +147,7 @@
                 <a href=""><img src="images/icons/insta.png" alt=""></a>
             </div>
         </div>
-        <div class="footer-column hide">
+        <div class="footer-column">
             <h3 class="section-title footer-column-title">Let’s Message me</h3>
             <form action="" class="contact">
                 <input type="text" name="" id="" placeholder="Your Name">
