--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <header class="header hide">
+    <header class="header">
         <nav>
             <h2 class="nav-title">Ma<span class="common-color">r</span>y</h2>
             <ul>
@@ -32,7 +32,7 @@
         </div>
     </header>
     <main>
-        <section class="about hide">
+        <section class="about">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
             <div class="about-info-container">
